public class PaletaFresa {
    
}
